# wallpapers

./: .qmake.conf  .travis.yml  CMakeLists.txt  README.md  wallpapers.pro  wallpapers.qbs
.github/workflows/: build.yml
backgrounds/: CMakeLists.txt  CREDITS.md  backgrounds.pro  backgrounds.qbs
